--- a/TODOList.API/Properties/launchSettings.json
+++ b/TODOList.API/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:3641",
-      "sslPort": 44355
+      "applicationUrl": "http://localhost:3974",
+      "sslPort": 44326
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TODO.API": {
+    "TODOList.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
