--- a/TODOList.MVC/TODOList.MVC.csproj
+++ b/TODOList.MVC/TODOList.MVC.csproj
@@ -8,6 +8,12 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TODOList.Entities\TODOList.Entities.csproj" />
+    <ProjectReference Include="..\TODOList.Repositories\TODOList.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
